--- a/payments.html
+++ b/payments.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <title>Referrer Test — payments</title>
+    <title>Referrer Test — payments прости господи</title>
     <!-- Разрешаем передавать Referer между доменами -->
     <meta name="referrer" content="origin-when-cross-origin" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -34,7 +34,7 @@
     </style>
   </head>
   <body>
-    <h1>Referrer Test — Payments Page</h1>
+    <h1>Referrer Test — Payments Page прости господи</h1>
     <a
       class="button"
       href="https://sheepy-develop.cpay.io/invoice/01k8z87k0ffv1dvg8d872w5e60"
