--- a/payments.html
+++ b/payments.html
@@ -37,7 +37,7 @@
     <h1>Referrer Test — Payments Page прости господи</h1>
     <a
       class="button"
-      href="https://sheepy-develop.cpay.io/invoice/01k9caqmebs5cyajz5s073fy0v"
+      href="https://sheepy-develop.cpay.io/payment-request/invoice-form?id=01k9cdnddsszeyy11hfynss8ea&email=check10031%40alfa.im"
     >
       Оплатить инвойс
     </a>
